[US6] Fix stretching images

--- a/frontend/src/app/components/news-detail/news-detail.component.scss
+++ b/frontend/src/app/components/news-detail/news-detail.component.scss
@@ -38,3 +38,7 @@
 .carousel-inner {
   height: 500px;
 }
+
+.carousel-inner img {
+  object-fit: cover;
+}
