--- a/frontend/src/app/components/news-item/news-item.component.scss
+++ b/frontend/src/app/components/news-item/news-item.component.scss
@@ -4,4 +4,5 @@
 
 img {
   height: 200px;
+  object-fit: cover;
 }
